--- a/inventory-management-system/ui-version/style.css
+++ b/inventory-management-system/ui-version/style.css
@@ -64,3 +64,14 @@ table th, table td {
     margin-top: 10px;
     font-weight: bold;
 }
+
+button {
+    background-color: rgb(132, 216, 216);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+button:hover {
+    background-color: rgba(3, 1, 24, 0.623);
+    color: white;
+}
