--- a/inventory-management-system/ui-version/style.css
+++ b/inventory-management-system/ui-version/style.css
@@ -17,6 +17,7 @@ h1 {
     padding: 20px 30px;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    opacity: 90%;
 }
 
 form input {
@@ -25,6 +26,7 @@ form input {
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    opacity: 80%;
 }
 
 form button {
